<resources>
    <string name="app_name">VR Store</string>
    <string name="guest">guest</string>
    <string name="blank_email" translatable="false">example@example.com</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sample_text" translatable="false">Sample Text</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Buy</string>
    <string name="clear_cart">Clear cart</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="author" translatable="false">Kamil Szram</string>
    <string name="author_email" translatable="false">kamilszram@wp.pl</string>
    <string name="share">share</string>
</resources>