<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:id="@+id/fragment_register_name"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_surname"
        android:id="@+id/fragment_register_surname"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:id="@+id/fragment_register_email"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:id="@+id/fragment_register_password"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/fragment_register_register"
        android:layout_margin="10dp"
        />




</LinearLayout>